# mana

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  ROADMAP.md  development-philosophy.md
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
manaTerminology/: (en)mana-terminology.md  (fr)mana-terminology.md  (jp)mana-terminology.md
src/: main.rs  process.rs
