[package]
name = "mana-tool"
authors = ["rii_125"]
version = "0.4.1"
edition = "2024"
description = "A simple and intuitive version management tool."
license = "MIT License"
repository = "https://github.com/rii125-125/mana"
readme = "README.md"
keywords = ["vcs", "git", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "mn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }

anyhow = "1.0"