[package]
name = "mana-tool"
authors = ["rii_125"]
version = "0.5.0"
edition = "2024"
description = "A simple and intuitive version management tool."
license = "MIT"
repository = "https://github.com/rii125-125/mana-tool"
readme = "README.md"
keywords = ["vcs", "git", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "mn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }

anyhow = "1.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
